# sessak_dep

./: docker-compose.yaml
nginx/: Dockerfile  default.conf
sessak_back/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
sessak_back/categories/: admin.py  models.py  serializers.py  urls.py  views.py
sessak_back/categories/migrations/: 0001_initial.py
sessak_back/comments/: admin.py  models.py  serializers.py  urls.py  views.py
sessak_back/comments/migrations/: 0001_initial.py  0002_initial.py
sessak_back/config/: settings.py  urls.py
sessak_back/posts/: admin.py  models.py  serializers.py  urls.py  views.py
sessak_back/posts/migrations/: 0001_initial.py  0002_alter_post_category.py  0002_initial.py
sessak_back/users/: admin.py  models.py  serializers.py  social_login.py  urls.py  views.py
sessak_back/users/migrations/: 0001_initial.py  0002_alter_user_nickname.py
